// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for color: background-base, hasLabel: false and theme: dark 1`] = `
":host {
  display: inline-block !important;
  vertical-align: top !important;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 0 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #0E0E12;
  color: #FBFCFF;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.icon {
  padding: 4px;
  margin-right: 10px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, hasLabel: false and theme: light 1`] = `
":host {
  display: inline-block !important;
  vertical-align: top !important;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 0 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #FFF;
  color: #010205;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.icon {
  padding: 4px;
  margin-right: 10px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, hasLabel: true and theme: dark 1`] = `
":host {
  display: inline-block !important;
  vertical-align: top !important;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 0 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #0E0E12;
  color: #FBFCFF;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #AFB0B3;
  font-size: .875rem;
}
.icon {
  padding: 4px;
  margin-right: 10px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, hasLabel: true and theme: light 1`] = `
":host {
  display: inline-block !important;
  vertical-align: top !important;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 0 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #FFF;
  color: #010205;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #535457;
  font-size: .875rem;
}
.icon {
  padding: 4px;
  margin-right: 10px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default, hasLabel: false and theme: dark 1`] = `
":host {
  display: inline-block !important;
  vertical-align: top !important;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 0 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #0E0E12;
  color: #FBFCFF;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.icon {
  padding: 4px;
  margin-right: 10px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default, hasLabel: false and theme: light 1`] = `
":host {
  display: inline-block !important;
  vertical-align: top !important;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 0 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #FFF;
  color: #010205;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.icon {
  padding: 4px;
  margin-right: 10px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default, hasLabel: true and theme: dark 1`] = `
":host {
  display: inline-block !important;
  vertical-align: top !important;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 0 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #0E0E12;
  color: #FBFCFF;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #AFB0B3;
  font-size: .875rem;
}
.icon {
  padding: 4px;
  margin-right: 10px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default, hasLabel: true and theme: light 1`] = `
":host {
  display: inline-block !important;
  vertical-align: top !important;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 0 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #FFF;
  color: #010205;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #535457;
  font-size: .875rem;
}
.icon {
  padding: 4px;
  margin-right: 10px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, hasLabel: true and theme: dark 1`] = `
":host {
  display: inline-block !important;
  vertical-align: top !important;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 0 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #212225;
  color: #FBFCFF;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #AFB0B3;
  font-size: .875rem;
}
.icon {
  padding: 4px;
  margin-right: 10px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, hasLabel: true and theme: light 1`] = `
":host {
  display: inline-block !important;
  vertical-align: top !important;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 0 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #EEEFF2;
  color: #010205;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #535457;
  font-size: .875rem;
}
.icon {
  padding: 4px;
  margin-right: 10px;
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;
